--- a/AutoPrint.csproj
+++ b/AutoPrint.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ST_AutoPrintV03</RootNamespace>
-    <AssemblyName>ST_AutoPrintV03</AssemblyName>
+    <AssemblyName>PCC</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
